collapsed impl package into socrates core API

--- a/src/main/java/com/w20e/socrates/workflow/package.html
+++ b/src/main/java/com/w20e/socrates/workflow/package.html
@@ -43,5 +43,9 @@
   actions, and provides mappings from one action to another, given a
   specific result of the previous action.
 
+  <h2>Implementation</h2>
+  This specific implementation API uses the Commons Digester for
+  creating a workflow.
+
 </body>
 </html>
